--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=TechJobsPersistent
+#spring.application.name=TechJobsPersistent
 server.port=8085
 
 # Database connection settings
